--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -1,5 +1,5 @@
 <div class="page-header text-center">
-  <h1>Set players</h1>
+  <h1>Joueurs</h1>
 </div>
 
 <div class="form-inline well well-sm text-center player-add-player-form" ng-repeat="player in $ctrl.players">
@@ -42,11 +42,13 @@
     </div>
   </div>
   
+  <!-- 
   <div class="form-group player-log-putts">
     <label class="btn">
       <input type="checkbox" ng-name="putts+$player.id" ng-model="player.logPutts">&nbsp;
     </label>
   </div>
+  -->
   
   <div class="btn-group pull-right">
     <button class="btn btn-danger" ng-click="$ctrl.removePlayer(player.id)" ng-class="{hidden: $ctrl.players.length<2}"> X </button>
@@ -55,11 +57,11 @@
 </div>
 
 <div class="form-group">
-  <button class="btn btn-default btn-block" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
+  <button class="btn btn-default btn-block" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Ajouter un joueur</button>
 </div>
 
 <div class="form-group">
-  <a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Back</a>
+  <a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Retour</a>
 
-  <a href="/#!/scorecard" class="btn btn-success pull-right" ng-click="$ctrl.updatePlayersService()">Start Game</a>
+  <a href="/#!/scorecard" class="btn btn-success pull-right" ng-click="$ctrl.updatePlayersService()">Commencer la partie</a>
 </div>
